tests/fixtures/negative/performance/UnnecessaryTemporaryInstantiation.kt
package fixtures.negative.performance

fun convert(x: Int): String {
    return x.toString()
}
